@@ -131,6 +131,11 @@ https://github.com/networkupstools/nut/milestone/11
      by the `configure` script during build, but can override it with a
      `NUT_PIDPATH` environment variable in certain use-cases (such as
      tests). [#2407]
+   * introduced a check for daemons working with PID files to double-check
+     that if they can resolve the program name of a running process with
+     this identifier, that such name matches the current program (avoid
+     failures to start NUT daemons if PID files are on persistent storage,
+     and some unrelated program got that PID after a reboot). [#2463]
 
  - various recipe, documentation and source files were revised to address
    respective warnings issued by the new generations of analysis tools.
